Started on problems 1 and 2, imported data, cleaned names

--- a/p8105_hw2_rk3110.md
+++ b/p8105_hw2_rk3110.md
@@ -8,6 +8,46 @@ Loading the libraries needed for this homework.
 
 ``` r
 library(tidyverse)
+library(readxl)
 ```
 
 # Problem 1
+
+First we need to import data from the Mr. Trash Wheel excel file.
+Looking at it, there is banner on line one that has a drawing of
+Mr. Wheel. While cute, we should exclude that line from the import. We
+will also clean the names up while we are at it.
+
+``` r
+trash_df = 
+  read_excel("data/Trash-Wheel-Collection-Totals-8-6-19.xlsx", skip = 1) %>% 
+  janitor::clean_names()
+```
+
+    ## New names:
+    ## * `` -> ...15
+    ## * `` -> ...16
+    ## * `` -> ...17
+
+# Problem 2
+
+Now we take a look at the FiveThirtyEight data. Let’s import the first
+csv, clean names, and separate the date variable into its components.
+
+``` r
+pols_df = 
+  read_csv("data/pols-month.csv") %>% 
+  janitor::clean_names() %>% 
+  separate(mon, into = c("year", "month", "day"), sep = "/")
+```
+
+    ## Rows: 822 Columns: 9
+
+    ## -- Column specification --------------------------------------------------------
+    ## Delimiter: ","
+    ## chr (1): mon
+    ## dbl (8): prez_gop, gov_gop, sen_gop, rep_gop, prez_dem, gov_dem, sen_dem, re...
+
+    ## 
+    ## i Use `spec()` to retrieve the full column specification for this data.
+    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
