--- a/p8105_hw2_rk3110.Rmd
+++ b/p8105_hw2_rk3110.Rmd
@@ -10,8 +10,29 @@ Loading the libraries needed for this homework.
 
 ```{r, message = FALSE}
 library(tidyverse)
+library(readxl)
 ```
 
 
 # Problem 1
+
+First we need to import data from the Mr. Trash Wheel excel file. Looking at it, there is banner on line one that has a drawing of Mr. Wheel. While cute, we should exclude that line from the import. We will also clean the names up while we are at it. 
+
+```{r}
+trash_df = 
+  read_excel("data/Trash-Wheel-Collection-Totals-8-6-19.xlsx", skip = 1) %>% 
+  janitor::clean_names()
+```
+
+
+# Problem 2
+
+Now we take a look at the FiveThirtyEight data. Let's import the first csv, clean names, and separate the date variable into its components.
+
+```{r}
+pols_df = 
+  read_csv("data/pols-month.csv") %>% 
+  janitor::clean_names() %>% 
+  separate(mon, into = c("year", "month", "day"), sep = "/")
+```
 
