--- a/p8105_hw2_rk3110.md
+++ b/p8105_hw2_rk3110.md
@@ -31,14 +31,24 @@ trash_df =
 
 # Problem 2
 
+## Part 1
+
 Now we take a look at the FiveThirtyEight data. Let’s import the first
-csv, clean names, and separate the date variable into its components.
+csv, clean names, separate the date variable into its components, and
+replace the month number with its name.We will also create a new
+variable `president` with values `gop` or `dem` and remove the variables
+`prez_dem`, `prez_gop`, and `day`.
 
 ``` r
 pols_df = 
   read_csv("data/pols-month.csv") %>% 
   janitor::clean_names() %>% 
-  separate(mon, into = c("year", "month", "day"), sep = "/")
+  separate(mon, into = c("month", "day", "year"), sep = "/", convert = TRUE) %>% 
+  mutate(
+    month = month.name[month],
+    president = recode(prez_dem, `0` = "gop", `1` = "dem")) %>% 
+  select(-day, -prez_dem, -prez_gop) %>% 
+  relocate(year)
 ```
 
     ## Rows: 822 Columns: 9
@@ -51,3 +61,61 @@ pols_df =
     ## 
     ## i Use `spec()` to retrieve the full column specification for this data.
     ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+## Part 2
+
+Next we move on to the snp.csv. We can reuse the separate code from part
+one here to separate the date components.
+
+``` r
+snp_df = 
+  read_csv("data/snp.csv") %>% 
+  janitor::clean_names() %>% 
+  separate(date, into = c("month", "day", "year"), sep = "/", convert = TRUE) %>% 
+  mutate(month = month.name[month]) %>% 
+  relocate(year, month)
+```
+
+    ## Rows: 787 Columns: 2
+
+    ## -- Column specification --------------------------------------------------------
+    ## Delimiter: ","
+    ## chr (1): date
+    ## dbl (1): close
+
+    ## 
+    ## i Use `spec()` to retrieve the full column specification for this data.
+    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+## Part 3
+
+Moving on to unemployment.csv. To match with the other two data sets, we
+need the columns to be year, month, and unemployment.The months are
+listed in the .csv as their three letter abbreviations so we need to fix
+that as well *(working on that bit)*.
+
+``` r
+unemployment_df = 
+  read_csv("data/unemployment.csv") %>% 
+  janitor::clean_names() %>% 
+  pivot_longer(
+    jan:dec,
+    names_to = "month",
+    values_to = "percent_unemployed"
+  ) %>%
+  relocate(year, month)
+```
+
+    ## Rows: 68 Columns: 13
+
+    ## -- Column specification --------------------------------------------------------
+    ## Delimiter: ","
+    ## dbl (13): Year, Jan, Feb, Mar, Apr, May, Jun, Jul, Aug, Sep, Oct, Nov, Dec
+
+    ## 
+    ## i Use `spec()` to retrieve the full column specification for this data.
+    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+# Problem 3
+
+A problem for later
