--- a/p8105_hw2_rk3110.Rmd
+++ b/p8105_hw2_rk3110.Rmd
@@ -50,25 +50,37 @@ snp_df =
   read_csv("data/snp.csv") %>% 
   janitor::clean_names() %>% 
   separate(date, into = c("month", "day", "year"), sep = "/", convert = TRUE) %>% 
-  mutate(month = month.name[month]) %>% 
+  mutate(month = month.name[month]) %>%
   relocate(year, month)
 ```
 
 ## Part 3
-Moving on to unemployment.csv. To match with the other two data sets, we need the columns to be year, month, and unemployment.The months are listed in the .csv as their three letter abbreviations so we need to fix that as well *(working on that bit)*. 
+Moving on to unemployment.csv. To match with the other two data sets, we need the columns to be year, month, and unemployment.The months are listed in the .csv as their three letter abbreviations so we need to fix that as well. 
 
 ```{r}
 unemployment_df = 
   read_csv("data/unemployment.csv") %>% 
   janitor::clean_names() %>% 
+  rename(January = jan, February = feb, March = mar, April = apr, May = may, June = jun, July = jul, August = aug, September = sep, October = oct, November = nov, December = dec) %>% 
   pivot_longer(
-    jan:dec,
+    January:December,
     names_to = "month",
     values_to = "percent_unemployed"
   ) %>%
   relocate(year, month)
 ```
 
+Now we join `pols_df` and `snp_df` and then join `unemployment_df` to the result
+
+```{r}
+pols_snp_unemploy_df = 
+  left_join(pols_df, snp_df, by = c("year", "month")) %>% 
+  left_join(unemployment_df, by = c("year", "month"))
+```
+
+*This is where a short paragraph, explaining what everything was originally and describing the new data set, will go*
+
+Our first data set, "pols-month," described the number of national politicians who are democrats or republicans at any given time. Our second data set, "snp," contained date information and an indicator of stock market performance. Our third data set, "unemployment," detailed the percentage of unemployment at any given time. *Describe the new df*
 
 # Problem 3
 
