Working on problem 1 data import

--- a/p8105_hw2_rk3110.md
+++ b/p8105_hw2_rk3110.md
@@ -20,7 +20,10 @@ will also clean the names up while we are at it.
 
 ``` r
 trash_df = 
-  read_excel("data/Trash-Wheel-Collection-Totals-8-6-19.xlsx", skip = 1) %>% 
+  read_excel("data/Trash-Wheel-Collection-Totals-7-2021-sept.xlsx", 
+      sheet = "Mr. Trash Wheel", 
+      skip = 1
+) %>% 
   janitor::clean_names()
 ```
 
@@ -28,6 +31,28 @@ trash_df =
     ## * `` -> ...15
     ## * `` -> ...16
     ## * `` -> ...17
+
+``` r
+trash_df_2 = 
+  read_excel("data/Trash-Wheel-Collection-Totals-7-2021-sept.xlsx", 
+      sheet = "Mr. Trash Wheel", 
+      range = "A2:N574"
+) %>% 
+  janitor::clean_names()
+```
+
+*Need to delete month total rows, comment columns to right of “homes
+powered” and round sports balls to nearest integer*
+
+Next we will import and clean the precipitation data for 2018.
+
+``` r
+prcp_2018 = 
+  read_excel("data/Trash-Wheel-Collection-Totals-7-2021-sept.xlsx",
+      sheet = "2018 Precipitation",
+      skip = 1) %>% 
+  janitor::clean_names()
+```
 
 # Problem 2
 
