Problem 1 data imported and cleaned

--- a/p8105_hw2_rk3110.md
+++ b/p8105_hw2_rk3110.md
@@ -15,43 +15,49 @@ library(readxl)
 
 First we need to import data from the Mr. Trash Wheel excel file.
 Looking at it, there is banner on line one that has a drawing of
-Mr. Wheel. While cute, we should exclude that line from the import. We
-will also clean the names up while we are at it.
+Mr. Wheel. While cute, we should exclude that line from the import.
+Since some cells of the sheet also contain notes, it is easiest to just
+define the area with the data we want when importing and then specify to
+drop rows without dumpster specific information. We will also clean the
+names and round the number of sports balls per dumpster to the nearest
+integer.
 
 ``` r
 trash_df = 
-  read_excel("data/Trash-Wheel-Collection-Totals-7-2021-sept.xlsx", 
-      sheet = "Mr. Trash Wheel", 
-      skip = 1
-) %>% 
-  janitor::clean_names()
-```
-
-    ## New names:
-    ## * `` -> ...15
-    ## * `` -> ...16
-    ## * `` -> ...17
-
-``` r
-trash_df_2 = 
-  read_excel("data/Trash-Wheel-Collection-Totals-7-2021-sept.xlsx", 
+  read_excel("data/Trash-Wheel-Collection-Totals-7-2020-2.xlsx", 
       sheet = "Mr. Trash Wheel", 
       range = "A2:N574"
 ) %>% 
-  janitor::clean_names()
+  janitor::clean_names() %>% 
+  drop_na(dumpster) %>% 
+  mutate(sports_balls = round(sports_balls))
 ```
 
-*Need to delete month total rows, comment columns to right of “homes
-powered” and round sports balls to nearest integer*
-
-Next we will import and clean the precipitation data for 2018.
+Next we will import and clean the precipitation data for 2018 and 2019.
+We will also combine the datasets and convert `month` to a character
+variable. I also reordered the columns so year comes first.
 
 ``` r
 prcp_2018 = 
-  read_excel("data/Trash-Wheel-Collection-Totals-7-2021-sept.xlsx",
+  read_excel("data/Trash-Wheel-Collection-Totals-7-2020-2.xlsx",
       sheet = "2018 Precipitation",
       skip = 1) %>% 
-  janitor::clean_names()
+  janitor::clean_names() %>% 
+  drop_na(month) %>% 
+  mutate(year = 2018)
+
+prcp_2019 = 
+  read_excel("data/Trash-Wheel-Collection-Totals-7-2020-2.xlsx",
+      sheet = "2019 Precipitation",
+      skip = 1) %>% 
+  janitor::clean_names() %>% 
+  drop_na(month) %>% 
+  mutate(year = 2019)
+
+prcp_df = 
+  bind_rows(prcp_2018, prcp_2019) %>% 
+  mutate(month = month.name[month]) %>% 
+  relocate(year)
 ```
 
 # Problem 2
