--- a/p8105_hw2_rk3110.md
+++ b/p8105_hw2_rk3110.md
@@ -60,6 +60,19 @@ prcp_df =
   relocate(year)
 ```
 
+*Paragraph about the data goes here!* the total precipitation in 2018
+was 70.33 inches. The median number of sports balls in a dumpster in
+2019 was 9 balls.
+
+``` r
+trash_df_2019 = 
+  filter(trash_df, year == 2019)
+
+  median(pull(trash_df_2019, sports_balls))
+```
+
+    ## [1] 9
+
 # Problem 2
 
 ## Part 1
