Problem 1 description done

--- a/p8105_hw2_rk3110.md
+++ b/p8105_hw2_rk3110.md
@@ -29,7 +29,7 @@ trash_df =
       range = "A2:N574"
 ) %>% 
   janitor::clean_names() %>% 
-  drop_na(dumpster) %>% 
+  drop_na() %>% 
   mutate(sports_balls = round(sports_balls))
 ```
 
@@ -60,18 +60,14 @@ prcp_df =
   relocate(year)
 ```
 
-*Paragraph about the data goes here!* the total precipitation in 2018
-was 70.33 inches. The median number of sports balls in a dumpster in
-2019 was 9 balls.
-
-``` r
-trash_df_2019 = 
-  filter(trash_df, year == 2019)
-
-  median(pull(trash_df_2019, sports_balls))
-```
-
-    ## [1] 9
+We end up with two data sets. The `trash_df` data frame contains 453
+observations of dumpsters filled by Mr. Trash Wheel between 2014 and
+2021. It includes the weight in tons of each dumpster and the amount of
+various types of trash such as plastic bottles and cigarette butts. The
+`prcp_df` data frame describes the total precipitation in inches across
+24 months from January 2018 to December 2019. The total precipitation in
+2018 was 70.33 inches. The median number of sports balls in a dumpster
+in 2019 was 9 balls.
 
 # Problem 2
 
