--- a/p8105_hw2_rk3110.md
+++ b/p8105_hw2_rk3110.md
@@ -2,8 +2,6 @@ Homework 2
 ================
 Rose Killian (rk3110)
 
-# Section 0
-
 Loading the libraries needed for this homework.
 
 ``` r
@@ -71,7 +69,7 @@ in 2019 was 9 balls.
 
 # Problem 2
 
-## Part 1
+### Cleaning pols-month.csv
 
 Now we take a look at the FiveThirtyEight data. Let’s import the first
 csv, clean names, separate the date variable into its components, and
@@ -102,7 +100,7 @@ pols_df =
     ## i Use `spec()` to retrieve the full column specification for this data.
     ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
 
-## Part 2
+### Cleaning snp.csv
 
 Next we move on to the snp.csv. We can reuse the separate code from part
 one here to separate the date components.
@@ -127,7 +125,7 @@ snp_df =
     ## i Use `spec()` to retrieve the full column specification for this data.
     ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
 
-## Part 3
+### Cleaning unemployment.csv
 
 Moving on to unemployment.csv. To match with the other two data sets, we
 need the columns to be year, month, and unemployment.The months are
@@ -157,23 +155,30 @@ unemployment_df =
     ## i Use `spec()` to retrieve the full column specification for this data.
     ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
 
+### Joining data frames and description
+
 Now we join `pols_df` and `snp_df` and then join `unemployment_df` to
 the result
 
 ``` r
-pols_snp_unemploy_df = 
+joined_df = 
   left_join(pols_df, snp_df, by = c("year", "month")) %>% 
   left_join(unemployment_df, by = c("year", "month"))
 ```
 
-*This is where a short paragraph, explaining what everything was
-originally and describing the new data set, will go*
-
 Our first data set, “pols-month,” described the number of national
-politicians who are democrats or republicans at any given time. Our
+politicians who are democrats or republicans between 1947 and 2015. Our
 second data set, “snp,” contained date information and an indicator of
 stock market performance. Our third data set, “unemployment,” detailed
-the percentage of unemployment at any given time. *Describe the new df*
+the monthly percentage of unemployment between 1948 and 2015. Our new
+data set contains 822 observations of 12 variables, including, year,
+month, political party of the president(`president`), number of
+democratic and republican politicians who are governors (`gov_gop` and
+`gov_dem`), senate members (`sen_gop` and `sen_dem`), or representatives
+(`rep_gop` and `rep_dem`). It also includes the closing values of the
+S&P stock index (`close`) and monthly unemployment as a percentage
+(`percent_unemployed`). The information in this data set ranges from
+years 1947 to 2015.
 
 # Problem 3
 
