--- a/p8105_hw2_rk3110.Rmd
+++ b/p8105_hw2_rk3110.Rmd
@@ -115,4 +115,35 @@ Our first data set, "pols-month," described the number of national politicians w
 
 # Problem 3
 
-A problem for later
+Importing "Popular_Baby_Names.csv" and cleaning the data. Some entries in year 2011 are duplicated and need to be removed. The ethnicity coding in 2012 truncated the ethnicity in some entries. We will also change all the entries to lowercase for consistency.
+
+```{r}
+baby_df = 
+  read_csv("data/Popular_Baby_Names.csv") %>% 
+  janitor::clean_names() %>% 
+  mutate(
+    ethnicity = replace(ethnicity, ethnicity == "ASIAN AND PACI", "ASIAN AND PACIFIC ISLANDER"),
+    ethnicity = replace(ethnicity, ethnicity == "WHITE NON HISP", "WHITE NON HISPANIC"),
+    ethnicity = replace(ethnicity, ethnicity == "BLACK NON HISP", "BLACK NON HISPANIC")
+    ) %>% 
+  mutate(
+    childs_first_name = str_to_lower(childs_first_name),
+    ethnicity = str_to_lower(ethnicity),
+    gender = str_to_lower(gender)
+    ) %>% 
+  distinct(year_of_birth, gender, ethnicity, childs_first_name, .keep_all = T)
+```
+
+Next we will make a table showing the yearly popularity rank of the name "Olivia" by ethnicity.
+
+```{r}
+baby_df %>% 
+  filter(childs_first_name == "olivia", gender == "female") %>% 
+  select(year_of_birth, ethnicity, rank) %>% 
+  pivot_wider(
+    names_from = "year_of_birth",
+    values_from = "rank"
+  ) %>% 
+    knitr::kable(caption = "Popularity of the Name Olivia for Female Babies")
+```
+
