--- a/p8105_hw2_rk3110.md
+++ b/p8105_hw2_rk3110.md
@@ -182,4 +182,58 @@ years 1947 to 2015.
 
 # Problem 3
 
-A problem for later
+Importing “Popular\_Baby\_Names.csv” and cleaning the data. Some entries
+in year 2011 are duplicated and need to be removed. The ethnicity coding
+in 2012 truncated the ethnicity in some entries. We will also change all
+the entries to lowercase for consistency.
+
+``` r
+baby_df = 
+  read_csv("data/Popular_Baby_Names.csv") %>% 
+  janitor::clean_names() %>% 
+  mutate(
+    ethnicity = replace(ethnicity, ethnicity == "ASIAN AND PACI", "ASIAN AND PACIFIC ISLANDER"),
+    ethnicity = replace(ethnicity, ethnicity == "WHITE NON HISP", "WHITE NON HISPANIC"),
+    ethnicity = replace(ethnicity, ethnicity == "BLACK NON HISP", "BLACK NON HISPANIC")
+    ) %>% 
+  mutate(
+    childs_first_name = str_to_lower(childs_first_name),
+    ethnicity = str_to_lower(ethnicity),
+    gender = str_to_lower(gender)
+    ) %>% 
+  distinct(year_of_birth, gender, ethnicity, childs_first_name, .keep_all = T)
+```
+
+    ## Rows: 19418 Columns: 6
+
+    ## -- Column specification --------------------------------------------------------
+    ## Delimiter: ","
+    ## chr (3): Gender, Ethnicity, Child's First Name
+    ## dbl (3): Year of Birth, Count, Rank
+
+    ## 
+    ## i Use `spec()` to retrieve the full column specification for this data.
+    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+Next we will make a table showing the yearly popularity rank of the name
+“Olivia” by ethnicity.
+
+``` r
+baby_df %>% 
+  filter(childs_first_name == "olivia", gender == "female") %>% 
+  select(year_of_birth, ethnicity, rank) %>% 
+  pivot_wider(
+    names_from = "year_of_birth",
+    values_from = "rank"
+  ) %>% 
+    knitr::kable(caption = "Popularity of the Name Olivia for Female Babies")
+```
+
+| ethnicity                  | 2016 | 2015 | 2014 | 2013 | 2012 | 2011 |
+|:---------------------------|-----:|-----:|-----:|-----:|-----:|-----:|
+| asian and pacific islander |    1 |    1 |    1 |    3 |    3 |    4 |
+| black non hispanic         |    8 |    4 |    8 |    6 |    8 |   10 |
+| hispanic                   |   13 |   16 |   16 |   22 |   22 |   18 |
+| white non hispanic         |    1 |    1 |    1 |    1 |    4 |    2 |
+
+Popularity of the Name Olivia for Female Babies
