--- a/p8105_hw2_rk3110.md
+++ b/p8105_hw2_rk3110.md
@@ -182,6 +182,8 @@ years 1947 to 2015.
 
 # Problem 3
 
+### Cleaning data
+
 Importing “Popular\_Baby\_Names.csv” and cleaning the data. Some entries
 in year 2011 are duplicated and need to be removed. The ethnicity coding
 in 2012 truncated the ethnicity in some entries. We will also change all
@@ -215,6 +217,8 @@ baby_df =
     ## i Use `spec()` to retrieve the full column specification for this data.
     ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
 
+### Olivia Popularity Ranking
+
 Next we will make a table showing the yearly popularity rank of the name
 “Olivia” by ethnicity.
 
@@ -238,8 +242,9 @@ baby_df %>%
 
 Popularity of the Name Olivia for Female Babies
 
-Looking at male children, let’s make a similar table with the name *Need
-to figure out popular boys name*
+### Popular Male Baby Name
+
+Lets find a popular name among male children.
 
 ``` r
 baby_df %>% 
@@ -270,9 +275,11 @@ baby_df %>%
 
 Popularity of the Name Jayden for Male Babies
 
-“Jayden” is not very popular among the White non-Hispanic group. White
-non-Hispanic people favor “Joseph” or “David” but no other group uses
-those names frequently.
+*“Jayden” is not very popular among the White non-Hispanic group. White
+non-Hispanic people favor “Joseph” or “David,” but no other group uses
+those names frequently.*
+
+## Scatterplot
 
 Finally, looking at male, white non-Hispanic children born in 2016 let’s
 make a scatter plot comparing the number of children with a name to its
