Minor fixes.Range of trash_df import was incorrect. Redid in-line r code for median sports balls

--- a/p8105_hw2_rk3110.Rmd
+++ b/p8105_hw2_rk3110.Rmd
@@ -20,10 +20,10 @@ First we need to import data from the Mr. Trash Wheel excel file. Looking at it,
 trash_df = 
   read_excel("data/Trash-Wheel-Collection-Totals-7-2020-2.xlsx", 
       sheet = "Mr. Trash Wheel", 
-      range = "A2:N574"
+      range = "A2:N535"
 ) %>% 
   janitor::clean_names() %>% 
-  drop_na() %>% 
+  drop_na(year) %>% 
   mutate(sports_balls = round(sports_balls))
 ```
 
@@ -52,7 +52,7 @@ prcp_df =
   relocate(year)
 ```
 
-We end up with two data sets. The `trash_df` data frame contains `r nrow(trash_df)` observations of dumpsters filled by Mr. Trash Wheel between `r min(pull(trash_df, year))` and `r max(pull(trash_df, year))`. It includes the weight in tons of each dumpster and the amount of various types of trash such as plastic bottles and cigarette butts. The `prcp_df` data frame describes the total precipitation in inches across `r nrow(prcp_df)` months from January 2018 to December 2019. The total precipitation in 2018 was `r sum(pull(prcp_2018, total))` inches. The median number of sports balls in a dumpster in 2019 was `r trash_df_2019 = filter(trash_df, year == 2019)``r  median(pull(trash_df_2019, sports_balls))` balls.
+We end up with two data sets. The `trash_df` data frame contains `r nrow(trash_df)` observations of dumpsters filled by Mr. Trash Wheel between `r min(pull(trash_df, year))` and `r max(pull(trash_df, year))`. It includes the weight in tons of each dumpster and the amount of various types of trash such as plastic bottles and cigarette butts. The `prcp_df` data frame describes the total precipitation in inches across `r nrow(prcp_df)` months from January 2018 to December 2019. The total precipitation in 2018 was `r sum(pull(prcp_2018, total))` inches. The median number of sports balls in a dumpster in 2019 was `r  median(pull(filter(trash_df, year == 2019), sports_balls))` balls.
 
 
 # Problem 2
