--- a/p8105_hw2_rk3110.md
+++ b/p8105_hw2_rk3110.md
@@ -24,10 +24,10 @@ integer.
 trash_df = 
   read_excel("data/Trash-Wheel-Collection-Totals-7-2020-2.xlsx", 
       sheet = "Mr. Trash Wheel", 
-      range = "A2:N574"
+      range = "A2:N535"
 ) %>% 
   janitor::clean_names() %>% 
-  drop_na() %>% 
+  drop_na(year) %>% 
   mutate(sports_balls = round(sports_balls))
 ```
 
